force-app/main/default/objects/Backlog_Items__c/Backlog_Items__c.object-meta.xml
<CustomObject>
    <label>Backlog ItemV</label>
    <nameField>
        <displayFormat>Item-{0000}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Backlog ItemV</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>