force-app/main/default/objects/Backlog_Items__c/fields/Actual_Deployment_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Deployment_Date__c</fullName>
    <label>Actual Deployment Date</label>
    <type>Date</type>
</CustomField>