force-app/main/default/objects/Backlog_Items__c/fields/Added_to_Change_Set__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Change_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Use to track if Backlog Components have been added to Change Set or not</description>
    <label>Added to Change Set?</label>
    <type>Checkbox</type>
</CustomField>