force-app/main/default/objects/Backlog_Items__c/fields/As_a_n__c.field-meta.xml
<CustomField>
    <fullName>As_a_n__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>As a(n)</label>
    <referenceTo>Persona__c</referenceTo>
    <relationshipName>Backlog_tems1</relationshipName>
    <type>Lookup</type>
</CustomField>