force-app/main/default/objects/Backlog_Items__c/fields/Assigned__c.field-meta.xml
<CustomField>
    <fullName>Assigned__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Backlog_tems</relationshipName>
    <type>Lookup</type>
</CustomField>