force-app/main/default/objects/Backlog_Items__c/fields/Backlog_Components__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Components__c</fullName>
    <label>Backlog Components</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>