force-app/main/default/objects/Backlog_Items__c/fields/Backlog_Components_Temp__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Components_Temp__c</fullName>
    <description>Temporary field for backlog components update.</description>
    <label>Backlog Components Temp</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>