force-app/main/default/objects/Backlog_Items__c/fields/Backlog_Type__c.field-meta.xml
<CustomField>
    <fullName>Backlog_Type__c</fullName>
    <label>Backlog Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Feature/Enhancement</fullName>
            </value>
            <value>
                <fullName>Question/Research</fullName>
            </value>
            <value>
                <fullName>Bug/Issue</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Feature/Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>