force-app/main/default/objects/Backlog_Items__c/fields/Bluewolf_Comments__c.field-meta.xml
<CustomField>
    <fullName>Bluewolf_Comments__c</fullName>
    <label>Bluewolf Comments</label>
    <type>TextArea</type>
</CustomField>