force-app/main/default/objects/Backlog_Items__c/fields/Business_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Business_Sign_Off__c</fullName>
    <label>Business Sign Off</label>
    <length>150</length>
    <type>Text</type>
</CustomField>