force-app/main/default/objects/Backlog_Items__c/fields/Carryover_Dev_Effort_Value__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Dev_Effort_Value__c</fullName>
    <label>Carryover Dev Effort Value</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>