force-app/main/default/objects/Backlog_Items__c/fields/Carryover_Story__c.field-meta.xml
<CustomField>
    <fullName>Carryover_Story__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carryover Story</label>
    <type>Checkbox</type>
</CustomField>