force-app/main/default/objects/Backlog_Items__c/fields/Client_Comments__c.field-meta.xml
<CustomField>
    <fullName>Client_Comments__c</fullName>
    <label>Client Comments</label>
    <type>TextArea</type>
</CustomField>