force-app/main/default/objects/Backlog_Items__c/fields/Deployment_Items__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Items__c</fullName>
    <label>Deployment Items</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>