force-app/main/default/objects/Backlog_Items__c/fields/Dev_Effort__c.field-meta.xml
<CustomField>
    <fullName>Dev_Effort__c</fullName>
    <inlineHelpText>1 = &lt; 1hr - Simple config, clear reqmts
2 = half day
3 = 1 day - minor reqmts questions, more complex config
5 = ~3 days - complex config/testing
8 = ~5 days
13 = 10+ days - Complex customization, unclear solution, research needed, heavy testing</inlineHelpText>
    <label>Dev Effort</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>