force-app/main/default/objects/Backlog_Items__c/fields/Development_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Development_Due_Date__c</fullName>
    <label>Development Due Date</label>
    <type>Date</type>
</CustomField>