force-app/main/default/objects/Backlog_Items__c/fields/Enduser_Contact__c.field-meta.xml
<CustomField>
    <fullName>Enduser_Contact__c</fullName>
    <label>Enduser Contact</label>
    <length>50</length>
    <type>Text</type>
</CustomField>