force-app/main/default/objects/Backlog_Items__c/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Epic</label>
    <type>Checkbox</type>
</CustomField>