force-app/main/default/objects/Backlog_Items__c/fields/Found_in__c.field-meta.xml
<CustomField>
    <fullName>Found_in__c</fullName>
    <label>Found in</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>alm_pm2__Found_in__c</fullName>
            </value>
            <value>
                <fullName>Production</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>