force-app/main/default/objects/Backlog_Items__c/fields/I_need__c.field-meta.xml
<CustomField>
    <fullName>I_need__c</fullName>
    <label>I need</label>
    <length>255</length>
    <type>Text</type>
</CustomField>