force-app/main/default/objects/Backlog_Items__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Instance</label>
    <referenceTo>Instances__c</referenceTo>
    <relationshipLabel>Backlog ItemV</relationshipLabel>
    <relationshipName>Backlog_ItemV</relationshipName>
    <type>Lookup</type>
</CustomField>