force-app/main/default/objects/Backlog_Items__c/fields/Needs_Communication_Plan__c.field-meta.xml
<CustomField>
    <fullName>Needs_Communication_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Communication Plan</label>
    <type>Checkbox</type>
</CustomField>