force-app/main/default/objects/Backlog_Items__c/fields/Object__c.field-meta.xml
<CustomField>
    <fullName>Object__c</fullName>
    <label>Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Account &amp; visibility</fullName>
            </value>
            <value>
                <fullName>Account Reassignment</fullName>
            </value>
            <value>
                <fullName>Activity</fullName>
            </value>
            <value>
                <fullName>AIQ Permissions Config - Deal Manager</fullName>
            </value>
            <value>
                <fullName>Campaign Lines - Deal Manager</fullName>
            </value>
            <value>
                <fullName>CampaignPriceDecay</fullName>
            </value>
            <value>
                <fullName>Carousel</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Contract Line Item Approvals - Deal Manager</fullName>
            </value>
            <value>
                <fullName>Contracts - Deal Manager</fullName>
            </value>
            <value>
                <fullName>Customer Price List</fullName>
            </value>
            <value>
                <fullName>Dashboard - Deal Manager</fullName>
            </value>
            <value>
                <fullName>Dashboards</fullName>
            </value>
            <value>
                <fullName>Division  Info</fullName>
            </value>
            <value>
                <fullName>FormAssembly</fullName>
            </value>
            <value>
                <fullName>Home Page</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Opportunity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Price Manager - Deal Manager</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>Promotions</fullName>
            </value>
            <value>
                <fullName>PSR</fullName>
            </value>
            <value>
                <fullName>Quote</fullName>
            </value>
            <value>
                <fullName>Reports</fullName>
            </value>
            <value>
                <fullName>Routing Records</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>