force-app/main/default/objects/Backlog_Items__c/fields/Parent_User_Story__c.field-meta.xml
<CustomField>
    <fullName>Parent_User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent User Story</label>
    <referenceTo>Backlog_Items__c</referenceTo>
    <relationshipName>Backlog_tems</relationshipName>
    <type>Lookup</type>
</CustomField>