force-app/main/default/objects/Backlog_Items__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Persona</label>
    <referenceTo>Persona__c</referenceTo>
    <relationshipName>Backlog_tems</relationshipName>
    <type>Lookup</type>
</CustomField>