force-app/main/default/objects/Backlog_Items__c/fields/Post_Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Post_Deployment_Steps__c</fullName>
    <label>Post-Deployment Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>