force-app/main/default/objects/Backlog_Items__c/fields/Pre_Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Pre_Deployment_Steps__c</fullName>
    <label>Pre-Deployment Steps</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>