force-app/main/default/objects/Backlog_Items__c/fields/QA_Effort__c.field-meta.xml
<CustomField>
    <fullName>QA_Effort__c</fullName>
    <label>QA Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>