force-app/main/default/objects/Backlog_Items__c/fields/QA_Tester__c.field-meta.xml
<CustomField>
    <fullName>QA_Tester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QA/Tester</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Backlog_tems1</relationshipName>
    <type>Lookup</type>
</CustomField>