force-app/main/default/objects/Backlog_Items__c/fields/Release__c.field-meta.xml
<CustomField>
    <fullName>Release__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Release</label>
    <referenceTo>ReleasesVertiv__c</referenceTo>
    <relationshipName>Backlog_tems</relationshipName>
    <type>Lookup</type>
</CustomField>