force-app/main/default/objects/Backlog_Items__c/fields/Request__c.field-meta.xml
<CustomField>
    <fullName>Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request</label>
    <referenceTo>SFDC_Request__c</referenceTo>
    <relationshipName>Backlog_tems</relationshipName>
    <type>Lookup</type>
</CustomField>