force-app/main/default/objects/Backlog_Items__c/fields/Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>Root_Cause__c</fullName>
    <label>Root Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>alm_pm2__Root_Cause__c</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Code Fix</fullName>
            </value>
            <value>
                <fullName>Configuration Issue</fullName>
            </value>
            <value>
                <fullName>Custom Code Issue</fullName>
            </value>
            <value>
                <fullName>Enhancement</fullName>
            </value>
            <value>
                <fullName>Deployment Issue</fullName>
            </value>
            <value>
                <fullName>Environmental</fullName>
            </value>
            <value>
                <fullName>3rd Party Software Fix</fullName>
            </value>
            <value>
                <fullName>Data Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>