force-app/main/default/objects/Backlog_Items__c/fields/Salesforce_Admin_Sign_Off__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Admin_Sign_Off__c</fullName>
    <label>Salesforce Admin Sign Off</label>
    <length>40</length>
    <type>Text</type>
</CustomField>