force-app/main/default/objects/Backlog_Items__c/fields/SFDC_Case_Number__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Case_Number__c</fullName>
    <label>SFDC Case Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>