force-app/main/default/objects/Backlog_Items__c/fields/SFDC_Project__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SFDC Project</label>
    <referenceTo>SFDC_Project__c</referenceTo>
    <relationshipName>Backlog_tems</relationshipName>
    <type>Lookup</type>
</CustomField>