force-app/main/default/objects/Backlog_Items__c/fields/SFDC_Support_Ticket_URL__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Support_Ticket_URL__c</fullName>
    <label>SFDC Support Ticket URL</label>
    <type>Url</type>
</CustomField>