force-app/main/default/objects/Backlog_Items__c/fields/So_that__c.field-meta.xml
<CustomField>
    <fullName>So_that__c</fullName>
    <label>So that</label>
    <length>255</length>
    <type>Text</type>
</CustomField>