force-app/main/default/objects/Backlog_Items__c/fields/Solution_Approach__c.field-meta.xml
<CustomField>
    <fullName>Solution_Approach__c</fullName>
    <label>Solution Approach</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>