force-app/main/default/objects/Backlog_Items__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Needs Requirements</fullName>
            </value>
            <value>
                <fullName>Ready for Grooming</fullName>
            </value>
            <value>
                <fullName>Groomed</fullName>
            </value>
            <value>
                <fullName>Needs Solution</fullName>
            </value>
            <value>
                <fullName>Dev Ready</fullName>
            </value>
            <value>
                <fullName>In Development</fullName>
            </value>
            <value>
                <fullName>QA Ready</fullName>
            </value>
            <value>
                <fullName>In QA/Testing</fullName>
            </value>
            <value>
                <fullName>QA Verified</fullName>
            </value>
            <value>
                <fullName>Shelf Ready</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Defect Resolution</fullName>
            </value>
            <value>
                <fullName>UAT Accepted</fullName>
            </value>
            <value>
                <fullName>Dev Complete</fullName>
            </value>
            <value>
                <fullName>In-Progress</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Reopened</fullName>
            </value>
            <value>
                <fullName>Build Ready</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>