force-app/main/default/objects/Backlog_Items__c/fields/Testing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Testing_Notes__c</fullName>
    <label>Testing Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>