force-app/main/default/objects/Backlog_Items__c/fields/User_Story__c.field-meta.xml
<CustomField>
    <fullName>User_Story__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Story</label>
    <referenceTo>Backlog_Items__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Backlog_tems1</relationshipName>
    <type>Lookup</type>
</CustomField>