force-app/main/default/objects/Backlog_Items__c/fields/Workaround__c.field-meta.xml
<CustomField>
    <fullName>Workaround__c</fullName>
    <label>Workaround</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>