force-app/main/default/objects/Backlog_Items__c/recordTypes/Defect.recordType-meta.xml
<RecordType>
    <fullName>Defect</fullName>
    <active>true</active>
    <description>A bug or an issue related to a story in development within a sandbox dev environment.</description>
    <label>Defect</label>
</RecordType>