force-app/main/default/objects/Backlog_Items__c/recordTypes/Production_Issue.recordType-meta.xml
<RecordType>
    <fullName>Production_Issue</fullName>
    <active>true</active>
    <description>An error, bug or data issue currently in Production. Not related to new development.</description>
    <label>Production Issue</label>
</RecordType>