force-app/main/default/objects/Backlog_Items__c/recordTypes/Story.recordType-meta.xml
<RecordType>
    <fullName>Story</fullName>
    <active>true</active>
    <description>A short, simple description of a feature told from the perspective of the person who desires the new capability.</description>
    <label>Story</label>
</RecordType>