force-app/main/default/objects/Backlog_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Release__c</columns>
    <columns>Sprint__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Title__c</field>
        <operation>contains</operation>
        <value>Health Check</value>
    </filters>
    <label>All Records</label>
</ListView>