force-app/main/default/objects/Backlog_Items__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>Title__c</columns>
    <columns>Release__c</columns>
    <columns>Sprint__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Instance__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned__c</columns>
    <columns>Dev_Effort__c</columns>
    <columns>Development_Due_Date__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>3380</value>
    </filters>
    <label>All</label>
</ListView>