force-app/main/default/objects/Backlog_Items__c/listViews/All_Currently_Open.listView-meta.xml
<ListView>
    <fullName>All_Currently_Open</fullName>
    <columns>Project_Name__c</columns>
    <columns>Sprint__c</columns>
    <columns>NAME</columns>
    <columns>Assigned__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>Release__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Released,On Hold,Canceled,Pass,Fail,Resolved,Rejected,Closed</value>
    </filters>
    <label>All - Currently Open</label>
</ListView>