force-app/main/default/objects/Backlog_Items__c/listViews/Assigned_Owned_Andrew.listView-meta.xml
<ListView>
    <fullName>Assigned_Owned_Andrew</fullName>
    <booleanFilter>2 AND (1 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>Object__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Development_Due_Date__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>Release__c</columns>
    <columns>Sprint__c</columns>
    <columns>Dev_Effort__c</columns>
    <columns>Assigned__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned__c</field>
        <operation>equals</operation>
        <value>Andrew Hare</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Released,Canceled,Pass,Fail,Resolved,Rejected,Closed,Deferred</value>
    </filters>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Hare</value>
    </filters>
    <label>Assigned/Owned - Andrew</label>
</ListView>