force-app/main/default/objects/Backlog_Items__c/listViews/Assigned_Owned_Angie.listView-meta.xml
<ListView>
    <fullName>Assigned_Owned_Angie</fullName>
    <booleanFilter>(1 OR 2) AND 3</booleanFilter>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>SFDC_Project__c</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Assigned__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Release__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>contains</operation>
        <value>Lasher</value>
    </filters>
    <filters>
        <field>Assigned__c</field>
        <operation>contains</operation>
        <value>Lasher</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Needs Requirements,Ready for Grooming,Groomed,Needs Solution,Dev Ready,In Development,QA Ready,In QA/Testing,QA Verified,Shelf Ready,Dev Complete,In-Progress,Open</value>
    </filters>
    <label>Assigned/Owned - Angie</label>
</ListView>