force-app/main/default/objects/Backlog_Items__c/listViews/Assigned_Owned_Candy.listView-meta.xml
<ListView>
    <fullName>Assigned_Owned_Candy</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Object__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Title__c</columns>
    <columns>Status__c</columns>
    <columns>Development_Due_Date__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>Release__c</columns>
    <columns>Sprint__c</columns>
    <columns>Dev_Effort__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER.LAST_NAME</field>
        <operation>equals</operation>
        <value>Carter</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>New,Needs Requirements,Ready for Grooming,Groomed,Needs Solution,Dev Ready,In Development,QA Ready,In QA/Testing,QA Verified,Shelf Ready,On Hold,UAT Accepted,Dev Complete,In-Progress,Open,Closed</value>
    </filters>
    <label>Assigned/Owned - Candy</label>
</ListView>