force-app/main/default/objects/Backlog_Items__c/listViews/Assigned_Owned_Christina.listView-meta.xml
<ListView>
    <fullName>Assigned_Owned_Christina</fullName>
    <columns>Title__c</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Description__c</columns>
    <columns>Development_Due_Date__c</columns>
    <columns>Planned_Deployment_Date__c</columns>
    <columns>Assigned__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Assigned__c</field>
        <operation>contains</operation>
        <value>Christina Daniels</value>
    </filters>
    <label>Assigned/Owned - Christina</label>
</ListView>